# secretary

./: .env.example  .gitignore  Dockerfile  LICENSE  README-zh.md  README.md  docker-compose.yml  example.env  main.py  pyproject.toml  run.sh  scheduler.py
.devcontainer/: devcontainer.json
.github/workflows/: docker-build.yml  test-dev-branches.yml  version-tag.yml
.instructions/: copilot-commit-message-instructions.md
config/: social-networks.example.yml  social-networks.yml
modules/: wecom.py
modules/bots/: qqchat.py  wechat.py  wecom.py
modules/langchain/: hunyuan.py  llm.py
modules/socialmedia/: post.py  truthsocial.py  twitter.py
modules/truthsocial/: main.py
utils/: messenger.py  redisClient.py  translator.py  yaml.py
